--- a/.gitignore
+++ b/.gitignore
@@ -8,18 +8,12 @@
 # .tfvars files
 *.tfvars
 
-# ignore this file
-!tfmodule-template.tf
-
 # tardigrade-ci
 .tardigrade-ci
 tardigrade-ci/
 
-# eclint
-.git/
-
-# terratest
-tests/go.*
-
 # terraform lock file
 .terraform.lock.hcl
+
+# Cache created by pytest
+tests/__pycache__/
